2.0.0a27
 - feat: add developer mode
 - fix: hide confusing "Advances Export" plot menu in developer mode
 - fix: only show scalar features in QuickView feature selection
 - fix: QuickView -> Event -> Features labels in table were drawn
   on top of each other
 - fix: minor redrawing issues
 - enh: Increased speed in QuickView when scrolling through events
2.0.0a26
 - feat: implement plot export
 - feat: implement filter export
 - fix: fix plot export in right-click menu (forked pyqtgraph)
 - ref: refactor block matrix and reset font sizes
 - build: make sure latest libraries of dclab and pyqtgraph are used
2.0.0a25
 - feat: implement data export
 - feat: implement simple computation of basic statistics
 - fix: pipeline modified plain dataset filter
 - fix: allow to remove all datasets or filters
 - fix: failed to load some datasets b/c of zero-valued meta data
 - fix: toggle buttons in Block Matrix not functional
 - enh: update font sizes
 - docs: minor update
2.0.0a24
 - implemented polygon filters
 - condense context menus, add export context menu to all plots
 - add computation of Young's modulus and crosstalk correction
 - add user-defined fluorescence labels in QuickView
 - add legend to trace in QuickView
 - populate metadata panel
 - implement multiple subplots per plot, plot title, plot labels,
   legend, and event count
 - refactor data model
 - functionalize buttons in analysis view
 - correctly handle datasets with different sets of features
2.0.0a23
 - add more update functions to fix frozen macOS app
 - improve plot visualizations
2.0.0a22
 - add update functions to fix non-updating UI behavior on macOS
   in frozen application
 - dclab: circumvent UnicodeDecodeError on on macOS (frozen)
2.0.0a21
 - fix regression with isoelastics in QuickView
 - fix display of features as hue
 - functionalize plotting panel
 - add modify button and corresponding logic for dataslots
 - refactor analysis view into separate submodule
2.0.0a20